feat: implement role-based access control (RBAC) with database migrations and frontend management interfaces